using System.Collections;
using System.Collections.Generic;
using UnityEngine;
   public class EasyAxis
    {
        public const string HORIZONTAL = "Horizontal";
        public const string VERTICAL = "Vertical";
    }
    public class MouseAxis
    {
    public const string MOUSE_X = "Mouse X";
    public const string MOUSE_Y = "Mouse Y";
    }
    public class AnimationTags
    {
    public const string SHOOT_TRIGER = "Shoot";
    public const string Aim_TRIGER = "Aim";
    public const string ZOOMIN_ANIM = "ZoomIn";
    public const string ZOOMOUT_ANIM = "ZoomOut";

    public const string WALK_ANIM = "Walk";
    public const string RUN_ANIM = "Run";
    public const string ATTACK_ANIM = "Attack";
    public const string DEAD_ANIM = "Death";
    }
    public class Tags
    {
    public const string LOOK_ROT = "LookRoot";
    public const string FP_CAM = "FPCamera";
    public const string CROSSHAIR = "CrossHair";
    public const string ARROW_TAG = "Arrow";
    public const string AXE_TAG = "Axe";
    public const string PLAYER_TAG = "Player";
    public const string ENEMY_TAG = "Enemy";
    }
   public class Money
    {
     public const string MoneyString = "Money";
    }
 public class Weapons
{
    public const string Spear = "Spear";
    public const string Bow = "Bow";
    public const string Revolver = "Revolver";
    public const string ShoutGun = "ShoutGun";
    public const string Ak = "Ak";
}
   

